welcome.lessons.welcome.variables.Variables.scala.error
Variables:15: error: value =! is not a member of Int
while (nbPas=!0)
            ^Variables:21: error: type mismatch;
 found   : Unit
 required: Boolean
if (nbPas=0)
         ^